--- a/CV.tex
+++ b/CV.tex
@@ -1,4 +1,4 @@
-ss{article}
+documentclass{article}
 \begin{document}
 First document. This is a simple example, with no 
 extra parameters or packages included
