Revert "Fixed documentclass"
This reverts commit d0220d1d163d9305651d1dc26890aab0a224e052.

--- a/CV.tex
+++ b/CV.tex
@@ -1,4 +1,4 @@
-documentclass{article}
+ss{article}
 \begin{document}
 First document. This is a simple example, with no 
 extra parameters or packages included
