Realy working tex

--- a/CV.tex
+++ b/CV.tex
@@ -1,5 +1,142 @@
-ss{article}
+\documentclass[a4paper]{article}
+\pagestyle{plain}
+\usepackage[utf8]{inputenc}
+\usepackage[english]{babel}
+\usepackage[pdftex]{graphicx}
+\usepackage{amsmath,amssymb}
+
+\paperwidth=210mm
+\paperheight=297mm
+
+\hoffset=0.0mm 		% By default offset from paper edge is 1 inch, this will set it to 25mm
+\voffset=-5.4mm		% By default offset from paper edge is 1 inch, this will set it to 20mm
+
+\oddsidemargin=0mm	% This will add nothing to hoffset
+\evensidemargin=0mm	% This will add nothing to hoffset
+\topmargin=0mm
+\headheight=0mm
+\headsep=0mm
+
+\textwidth=170mm
+\textheight=237mm
+
 \begin{document}
-First document. This is a simple example, with no 
-extra parameters or packages included
+\title{Sakevych Michael}
+\date{\vspace*{-6е}}
+\maketitle
+\begin{center} 
+{\small{\tt sakevich2001@gmail.com}}
+\end{center}
+\textbf{Education}
+\noindent\rule{\textwidth}{1pt}
+\textbf{Technical Skills}
+\noindent\rule{\textwidth}{1pt}
+\begin{itemize}
+	\item Ядро - містить генетичний матеріал (ДНК) і контролює діяльність клітини.
+	\item Клітинна мембрана(глікокалікс) - гнучкий шар, який оточує клітину і контролює речовини, що надходять і виходять.
+	\item Цитоплазма - желеподібна речовина, в якій відбуваються хімічні реакції.
+	\item Мітохондрії - тут енергія виділяється з молекул їжі.
+\end{itemize}
+\textbf{Experience}
+\begin{itemize}
+	\item Клітинна стінка - Твердий шар поза клітинною мембраною, що містить целюлозу для забезпечення міцності рослини.
+	\item Вакуоль - простір усередині клітини, який використовується для зберігання речовин і допомагає клітині зберігати форму.
+	\item Хлоропласти - структури, що містять зелений пігмент хлорофіл, який є ключовою частиною фотосинтезу.
+\end{itemize}
+\textbf{Additional Courses}
+\noindent\rule{\textwidth}{1pt}
+\begin{table}[ht]
+\centering
+\caption{Основні відмінності між клітинами рослинного та тваринячого походження}\label{Table1}
+\vspace*{1ex}
+\begin{tabular}{|p{7cm}|p{7cm}|}
+\hline
+Клітини рослин & Клітини тварин \\
+\hline
+\multicolumn{2}{|c|}{Форма клітини}\\
+\hline
+Квадратні або прямокутні & Неправильна або кругла форма\\
+\hline
+\multicolumn{2}{|c|}{Клітинна стінка}\\
+\hline
+Містить & Немає\\
+\hline
+\multicolumn{2}{|c|}{Плазматична або клітинна мембрана}\\
+\hline
+Присутня & Присутня\\
+\hline
+\multicolumn{2}{|c|}{Ендоплазматичний ретикулум}\\
+\hline
+Присутня & Присутня\\
+\hline
+\multicolumn{2}{|c|}{Ядро}\\
+\hline
+Присутнє і лежить з одного боку клітини & Присутній і лежить у центрі клітини\\
+\hline
+\multicolumn{2}{|c|}{Лізосоми}\\
+\hline
+Присутні, але дуже рідкісні & Присутні \\
+\hline
+\multicolumn{2}{|c|}{Центросоми}\\
+\hline
+Відсутні & Присутні\\
+\hline
+\multicolumn{2}{|c|}{Апарат Гольджі}\\
+\hline
+Присутній & Присутній\\
+\hline
+\multicolumn{2}{|c|}{Цитоплазма}\\
+\hline
+Присутня & Присутня\\
+\hline
+\multicolumn{2}{|c|}{Рибосоми}\\
+\hline
+Присутні & Присутні\\
+\hline
+\multicolumn{2}{|c|}{Пластиди}\\
+\hline
+Присутні & Відсутні\\
+\hline
+\multicolumn{2}{|c|}{Вакуолі}\\
+\hline
+Одна  велика або декілька вакуоль, розташовані в центрі & Зазвичай маленькі і численні\\
+\hline
+\multicolumn{2}{|c|}{Джгутики}\\
+\hline
+Присутні у деяких & Присутні у більшості тваринних клітин\\
+\hline
+\multicolumn{2}{|c|}{Мітохондрії}\\
+\hline
+Присутні у невеликій кількості & Присутні у великій кількості \\
+\hline
+\multicolumn{2}{|c|}{Тип харчування}\\
+\hline
+Більшість автотрофний & Гетеротрофний \\
+\hline
+\end{tabular}
+\end{table}
+\begin{itemize}
+	\item Рослини не можуть харчуватися, вживаючи їжу, тому їм потрібно виробляти поживні речовини іншим шляхом, наприклад шляхом поглинання сонячного світла. Цей 
+	процес називається фотосинтез та відбувається в хлоропласті.
+ 	Після того, як цукор виготовлений, він потім розщеплюється мітохондріями для отримання енергії для клітини. Оскільки тварини отримують цукор з їжею, яку вони 
+	їдять, їм не потрібні хлоропласти: просто мітохондрії.
+	\item Як рослинні, так і тваринні клітини мають вакуолі. Рослинна клітина зазвичай містить велику одиничну вакуолю, яка використовується для зберігання та підтримки 
+	форми клітини та використовується у якості резервуару для води. На противагу цьому, клітини тварин мають багато менших вакуолей.
+	\item Рослинні клітини мають клітинну стінку, а також клітинну мембрану. У рослин клітинна стінка оточує клітинну мембрану. Це надає рослинній клітині унікальної
+	прямокутної форми. Клітини тварин просто мають клітинну мембрану, але клітинної стінки немає.
+\end{itemize}
+\begin{itemize}
+	\item Більшість клітин рослин можуть перетворюватись з одних на інші за потреби. В той же час з клітин тварин лише стовбурові клітини можуть перетворюватись. 
+	\item Тваринні клітини, на відміну від рослинних, здатні генерувати лише 10 амінокислот з 20 (інші 10 вони отримують з їжі).
+	\item Рослинні клітини зберігають енергію формуючи крохмал, а тваринні - утворюючи вуглецеві глюкогени.
+	\item Рослинні клітини зазвичай розміром від 10 до 100 мікрометрів, а тваринні - 10-30.
+	\item Рослинні клітини нерухомі (вийнятками є статеві клітини нижчих та вищих спорових рослин).
+	\item Клітини тварин не мають пластид. Рослинні клітини містять такі пластиди, як хлоропласти, які необхідні для фотосинтезу .
+	\item У всіх тварин клітин є центріолі, в той час як лише у деяких нижчих форм рослин є центріолі в клітинах;
+	\item Рослини не здатні активно пересуватися, тому пристосувалися автотрофне способу харчування, синтезуючи самостійно всі необхідні поживні 
+	речовини з неорганічних сполук.
+	\item Взаємозв'язок між клітинами рослин здійснюється за рахунок плазмодесми, тварин - за допомогою десмосом.
+\end{itemize}
+\textbf{Achievements and Extracurricular Activities}
+\noindent\rule{\textwidth}{1pt}
 \end{document}
